--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
   <div class="controls">
     <button id="startButton">1 2 3 START！</button>
     <button id="startButton2">2 3 4 START！</button>
-    <button id="stopButton" disabled>STOP</button>
     <button id="refreshButton">C调音阶</button>
     BPM:
     <input id="speedInput" type="number" min="1" value="60" />
@@ -60,7 +59,6 @@
     const chordNameElement = document.getElementById('chord-name');
     const startButton = document.getElementById('startButton');
     const startButton2 = document.getElementById('startButton2');
-    const stopButton = document.getElementById('stopButton');
     const refreshButton = document.getElementById('refreshButton');
     const metronomeSound = document.getElementById('metronomeSound');
 
@@ -318,8 +316,6 @@
       }
       if (!intervalId) {
         intervalId = setInterval(switchChordSet, (60 / speed) * 1000);
-        startButton.disabled = true;
-        stopButton.disabled = false;
       }
     }
 
@@ -348,8 +344,6 @@
       }
       if (!intervalId) {
         intervalId = setInterval(switchChordSet2, (60 / speed) * 1000);
-        startButton2.disabled = true;
-        stopButton.disabled = false;
       }
     }
 
@@ -361,10 +355,6 @@
       if (intervalId) {
         clearInterval(intervalId);
         intervalId = null;
-        startButton.disabled = false;
-        startButton2.disabled = false;
-        stopButton.disabled = true;
-        chordNameElement.textContent = '吉他指板音阶';
         //drawFretboard();
         drawFretNumbers();
         // drawNotes();
@@ -405,8 +395,24 @@
     drawFretNumbers();
 
     // 绑定按钮事件
-    startButton.addEventListener('click', startAnimation);
-    startButton2.addEventListener('click', startAnimation2);
+    startButton.addEventListener('click', () => {
+      if (startButton.textContent === '1 2 3 START！') {
+        startButton.textContent = 'STOP';
+        startAnimation();
+      } else {
+        startButton.textContent = '1 2 3 START！';
+        stopAnimation();
+      }
+    });
+    startButton2.addEventListener('click', () => {
+      if (startButton2.textContent === '2 3 4 START！') {
+        startButton2.textContent = 'STOP';
+        startAnimation2();
+      } else {
+        startButton2.textContent = '2 3 4 START！';
+        stopAnimation();
+      }
+    });
     stopButton.addEventListener('click', stopAnimation);
     refreshButton.addEventListener('click', refresh);
   </script>
